overlays/uksouth-perf/olympus/locust/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: locust
  namespace: default
spec:
  rules:
    - host: locust.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /v1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: locust-controller-v1
                port:
                  number: 8089
          - path: /v2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: locust-controller-v2
                port:
                  number: 8089
  tls:
    - hosts:
        - locust.${cluster_name}.${cluster_location}.bink.sh
